# lyra

./: Cargo.toml  LICENSE  README.md
docs/: README.en.md
src/: main.rs  mpd.rs
src/config/: loader.rs  mod.rs  paths.rs
src/lyrics/: mod.rs  parser.rs
src/model/: config.rs  lyrics.rs  mod.rs
src/ui/: app.rs  controller.rs  mod.rs  renderer.rs  widgets.rs
test_data/: 完美借口_歌词.lrc
