[package]
name = "lyra"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
dirs = "6.0.0"
lofty = "0.22.4"
mpd = "*"
ratatui = { version = "0.30.0-alpha.5" }
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
toml = "0.9.2"
walkdir = "2.5.0"
